2022-04-24  Mark Wielaard  <mark@klomp.org>

	* elfclassify.c (main): Use classify_flag_no_stdin for no-std in options.

2022-04-19  Mark Wielaard  <mark@klomp.org>

	* readelf.c (get_dyn_ents): Define dyn_mem outside the while loop.

2022-03-01  Di Chen  <dichen@redhat.com>

	* readelf.c (get_dyn_ents): New function.
	(handle_dynamic): Use get_dyn_ents to get the actual number of
	Dynamic entries in the section.

2022-03-27  Mark Wielaard  <mark@klomp.org>

	* addr2line.c: Replace error (EXIT_FAILURE, ...) with error_exit(...).
	* ar.c: Likewise.
	* arlib.c: Likewise.
	* elfcompress.c: Likewise.
	* nm.c: Likewise.
	* objdump.c: Likewise.
	* readelf.c: Likewise.
	* size.c: Likewise.
	* strings.c: Likewise.
	* strip.c: Likewise.
	* unstrip.c: Likewise.

2022-03-24  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_note_data): Recognize NT_FDO_PACKAGING_METADATA.

2022-03-11  Mark Wielaard  <mark@klomp.org>

	* addr2line.c (OPT_RELATIVE): New constant.
	(options): Add --relative.
	(use_comp_dir): Initialize to true.
	(parse_opt): Handle OPT_RELATIVE.

2021-12-04  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ehdr): Pass sizeof (buf) - 1 to strncpy.

2021-10-20  John M Mellor-Crummey  <johnmc@rice.edu>

	* readelf.c (print_debug_line_section): Try to read
	debug_str_offset if available.  Handle DW_LNE_NVIDIA_inlined_call
	and DW_LNE_NVIDIA_set_function_name.

2021-10-06  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_sections): Don't dereference databits if bad.

2021-09-09  Dmitry V. Levin  <ldv@altlinux.org>

	* findtextrel.c: Include "libeu.h".
	(open_rootdir_file): New function.
	(process_file): Use it to open file inside rootdir.
	* Makefile.am (findtextrel_no_Wstack_usage): Remove.

2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* objdump.c (show_disasm): Replace asprintf followed by
	error(EXIT_FAILURE) with xasprintf.
	* readelf.c (handle_gnu_hash): Likewise.
	* unstrip.c (handle_output_dir_module, main): Likewise.
