@@ -1,3 +1,8 @@
+2022-05-10  Mark Wielaard  <mark@klomp.org>
+
+	* elfcompress.c (process_file): Sanity check shstrtab_name,
+	shstrtab_newname and symstrents are only set once.
+
 2022-04-24  Mark Wielaard  <mark@klomp.org>
 
 	* elfclassify.c (main): Use classify_flag_no_stdin for no-std in options.
